@@ -147,6 +147,12 @@ wheel:rim_mu 0.1 #friction on (metal) sides of wheel
 #gives more stable grip and movement on multiple collisions/dense trimeshes
 tyre:mix_angle 40 #mix points with normals less than 40° apart
 
+#disable contact ppprox1 in ode and use custom calculation of load/normal forde
+#gives much more stable friction forces and prevents shaking wheel
+tyre:alt_load true
+tyre:alt_load_damp true #calculate spring&damping, not just spring forces
+#TODO: max_/min_load to prevent too high/low friction? or smoothing function?
+
 #
 #The Not-So-Magic formula:
 #
